<?xml version="1.0" encoding="UTF-8"?>
<!--
  Licensed to the Apache Software Foundation (ASF) under one
  or more contributor license agreements.  See the NOTICE file
  distributed with this work for additional information
  regarding copyright ownership.  The ASF licenses this file
  to you under the Apache License, Version 2.0 (the
  "License"); you may not use this file except in compliance
  with the License.  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing,
  software distributed under the License is distributed on an
  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  KIND, either express or implied.  See the License for the
  specific language governing permissions and limitations
  under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.apache.arrow.adbc.verify</groupId>
  <artifactId>adbc-java-verification</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Apache Arrow ADBC Java Verification</name>

  <properties>
    <!-- Filled in by the verification script. -->
    <adbc.version>0.0.0</adbc.version>
    <argLine>${surefireArgLine} --add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED</argLine>
    <maven.compiler.release>11</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <surefireArgLine></surefireArgLine>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.14.4</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- List all subcomponents explicitly. -->
    <dependency>
      <groupId>org.apache.arrow.adbc</groupId>
      <artifactId>adbc-core</artifactId>
      <version>${adbc.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.arrow.adbc</groupId>
      <artifactId>adbc-driver-flight-sql</artifactId>
      <version>${adbc.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.arrow.adbc</groupId>
      <artifactId>adbc-driver-jdbc</artifactId>
      <version>${adbc.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.arrow.adbc</groupId>
      <artifactId>adbc-driver-jni</artifactId>
      <version>${adbc.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.arrow.adbc</groupId>
      <artifactId>adbc-driver-manager</artifactId>
      <version>${adbc.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.arrow.adbc</groupId>
      <artifactId>adbc-sql</artifactId>
      <version>${adbc.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>java-25+</id>
      <activation>
        <jdk>[25,)</jdk>
      </activation>
      <properties>
        <surefireArgLine>--sun-misc-unsafe-memory-access=allow</surefireArgLine>
      </properties>
    </profile>
  </profiles>
</project>
